--- a/app/src/main/res/layout/activity_add_customer.xml
+++ b/app/src/main/res/layout/activity_add_customer.xml
@@ -35,178 +35,176 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
-        <androidx.cardview.widget.CardView
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardCornerRadius="25dp"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="2dp"
-                android:layout_marginTop="5dp"
-                android:gravity="center_vertical"
-                android:background="#000000"
-                android:orientation="horizontal">
+                android:layout_marginBottom="20dp"
+                android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="140dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:padding="8dp"
-                    android:text="Name *"
-                    android:textColor="#FFFFFF"/>
-                <EditText
-                    android:id="@+id/edittextName"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:lines="1"
-                    android:padding="8dp"
-                    android:textColor="#FFFFFF"
-                    android:inputType="textCapWords"
-                    android:imeOptions="actionNext"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="2dp"
-                android:layout_marginTop="5dp"
-                android:gravity="center_vertical"
-                android:background="#000000"
-                android:orientation="horizontal">
+                    android:padding="2dp"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center_vertical"
+                    android:background="#000000"
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:layout_width="140dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:padding="8dp"
-                    android:text="Contact *"
-                    android:textColor="#FFFFFF"/>
-
-                <EditText
-                    android:id="@+id/edittextContact"
+                    <TextView
+                        android:layout_width="140dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:padding="8dp"
+                        android:text="Name *"
+                        android:textColor="#FFFFFF"/>
+                    <EditText
+                        android:id="@+id/edittextName"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:lines="1"
+                        android:padding="8dp"
+                        android:textColor="#FFFFFF"
+                        android:inputType="textCapWords"
+                        android:imeOptions="actionNext"/>
+                </LinearLayout>
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:imeOptions="actionNext"
-                    android:inputType="phone"
-                    android:padding="8dp"
-                    android:textColor="#FFFFFF" />
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="2dp"
-                android:layout_marginTop="5dp"
-                android:gravity="center_vertical"
-                android:background="#000000"
-                android:orientation="horizontal">
+                    android:padding="2dp"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center_vertical"
+                    android:background="#000000"
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:layout_width="140dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:padding="8dp"
-                    android:text="Area *"
-                    android:textColor="#FFFFFF"/>
+                    <TextView
+                        android:layout_width="140dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:padding="8dp"
+                        android:text="Contact *"
+                        android:textColor="#FFFFFF"/>
 
-                <Spinner
-                    android:id="@+id/spinnerArea"
+                    <EditText
+                        android:id="@+id/edittextContact"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:imeOptions="actionNext"
+                        android:inputType="phone"
+                        android:padding="8dp"
+                        android:textColor="#FFFFFF" />
+                </LinearLayout>
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="8dp"
-                    android:entries="@array/areas_array"
-                    android:spinnerMode="dropdown"/>
+                    android:padding="2dp"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center_vertical"
+                    android:background="#000000"
+                    android:orientation="horizontal">
 
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="2dp"
-                android:layout_marginTop="5dp"
-                android:gravity="center_vertical"
-                android:background="#000000"
-                android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="140dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:padding="8dp"
+                        android:text="Area *"
+                        android:textColor="#FFFFFF"/>
 
-                <TextView
-                    android:layout_width="140dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:padding="8dp"
-                    android:text="Address"
-                    android:textColor="#FFFFFF"/>
+                    <Spinner
+                        android:id="@+id/spinnerArea"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="8dp"
+                        android:entries="@array/areas_array"
+                        android:spinnerMode="dropdown"/>
 
-                <EditText
-                    android:id="@+id/edittextAddress"
+                </LinearLayout>
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:imeOptions="actionDone"
-                    android:padding="8dp"
-                    android:textColor="#FFFFFF"
-                    android:inputType="text"
-                    android:textColorHint="#607D8B" />
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="2dp"
-                android:layout_marginTop="5dp"
-                android:gravity="center_vertical"
-                android:background="#000000"
-                android:orientation="horizontal">
+                    android:padding="2dp"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center_vertical"
+                    android:background="#000000"
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:layout_width="140dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:padding="8dp"
-                    android:text="Pin Location *"
-                    android:textColor="#FFFFFF"/>
+                    <TextView
+                        android:layout_width="140dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:padding="8dp"
+                        android:text="Address"
+                        android:textColor="#FFFFFF"/>
 
-                <com.google.android.gms.maps.MapView
-                    android:id="@+id/mapView"
+                    <EditText
+                        android:id="@+id/edittextAddress"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:imeOptions="actionDone"
+                        android:padding="8dp"
+                        android:textColor="#FFFFFF"
+                        android:inputType="text"
+                        android:textColorHint="#607D8B" />
+                </LinearLayout>
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:padding="8dp"/>
+                    android:layout_height="wrap_content"
+                    android:padding="2dp"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center_vertical"
+                    android:background="#000000"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="140dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:padding="8dp"
+                        android:text="Pin Location *"
+                        android:textColor="#FFFFFF"/>
+
+                    <com.google.android.gms.maps.MapView
+                        android:id="@+id/mapView"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:padding="8dp"/>
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="2dp"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center_vertical"
+                    android:background="#000000"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="140dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:padding="8dp"
+                        android:text="Select Image"
+                        android:textColor="#FFFFFF"/>
+
+                    <ImageView
+                        android:id="@+id/imageView"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/imageupload"/>
+
+                </LinearLayout>
 
             </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="2dp"
-                android:layout_marginTop="5dp"
-                android:layout_gravity="center_vertical"
-                android:background="#000000"
-                android:orientation="horizontal">
 
-<!--                <TextView-->
-<!--                    android:layout_width="140dp"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_marginLeft="5dp"-->
-<!--                    android:padding="8dp"-->
-<!--                    android:text="Select Image"-->
-<!--                    android:textColor="#FFFFFF"/>-->
-
-<!--                <EditText-->
-<!--                    android:id="@+id/edittext6"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:imeOptions="actionNext"-->
-<!--                    android:inputType="numberDecimal"-->
-<!--                    android:padding="8dp"-->
-<!--                    android:textColor="#FFFFFF"-->
-<!--                    android:textColorHint="#607D8B" />-->
-
-            </LinearLayout>
-
-        </LinearLayout>
+        </ScrollView>
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
