--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -32,6 +32,13 @@
 
     </LinearLayout>
 
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:src="@drawable/imageupload"
+        android:layout_width="200dp"
+        android:layout_height="200dp"/>
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
