--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,7 +19,7 @@
         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
-            app:srcCompat="@drawable/profile" />
+            android:src="@drawable/profile"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -90,8 +90,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:gravity="right|center_vertical"
                 android:layout_marginTop="20dp"
+                android:gravity="right|center_vertical"
                 android:orientation="horizontal">
 
                 <com.airbnb.lottie.LottieAnimationView
